; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/quartz/extr_filtergraph.c_ExploreGraph.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/quartz/extr_filtergraph.c_ExploreGraph.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }
%struct.TYPE_5__ = type { i32* }

@.str = private unnamed_addr constant [7 x i8] c"%p %p\0A\00", align 1
@.str.1 = private unnamed_addr constant [20 x i8] c"Reached a renderer\0A\00", align 1
@.str.2 = private unnamed_addr constant [28 x i8] c"Doing stuff with filter %p\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_6__*, i32*, i32 (i32*, i32)*, i32)* @ExploreGraph to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ExploreGraph(%struct.TYPE_6__* %0, i32* %1, i32 (i32*, i32)* %2, i32 %3) #0 {
  %5 = alloca %struct.TYPE_6__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32 (i32*, i32)*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32**, align 8
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  %14 = alloca %struct.TYPE_5__, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 (i32*, i32)* %2, i32 (i32*, i32)** %7, align 8
  store i32 %3, i32* %8, align 4
  %15 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %16 = load i32*, i32** %6, align 8
  %17 = call i32 (i8*, ...) @TRACE(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), %struct.TYPE_6__* %15, i32* %16)
  %18 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  store i32* null, i32** %18, align 8
  %19 = load i32*, i32** %6, align 8
  %20 = call i32 @IPin_ConnectedTo(i32* %19, i32** %10)
  store i32 %20, i32* %9, align 4
  %21 = load i32, i32* %9, align 4
  %22 = call i64 @SUCCEEDED(i32 %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %38

24:                                               ; preds = %4
  %25 = load i32*, i32** %10, align 8
  %26 = call i32 @IPin_QueryPinInfo(i32* %25, %struct.TYPE_5__* %14)
  store i32 %26, i32* %9, align 4
  %27 = load i32, i32* %9, align 4
  %28 = call i64 @SUCCEEDED(i32 %27)
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %35

30:                                               ; preds = %24
  %31 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  %32 = load i32*, i32** %31, align 8
  %33 = load i32*, i32** %10, align 8
  %34 = call i32 @GetInternalConnections(i32* %32, i32* %33, i32*** %11, i64* %12)
  store i32 %34, i32* %9, align 4
  br label %35

35:                                               ; preds = %30, %24
  %36 = load i32*, i32** %10, align 8
  %37 = call i32 @IPin_Release(i32* %36)
  br label %38

38:                                               ; preds = %35, %4
  %39 = load i32, i32* %9, align 4
  %40 = call i64 @SUCCEEDED(i32 %39)
  %41 = icmp ne i64 %40, 0
  br i1 %41, label %42, label %85

42:                                               ; preds = %38
  %43 = load i64, i64* %12, align 8
  %44 = icmp eq i64 %43, 0
  br i1 %44, label %45, label %51

45:                                               ; preds = %42
  %46 = call i32 (i8*, ...) @TRACE(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0))
  %47 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %48 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %47, i32 0, i32 0
  %49 = load i32, i32* %48, align 4
  %50 = add nsw i32 %49, 1
  store i32 %50, i32* %48, align 4
  br label %76

51:                                               ; preds = %42
  store i64 0, i64* %13, align 8
  br label %52

52:                                               ; preds = %70, %51
  %53 = load i64, i64* %13, align 8
  %54 = load i64, i64* %12, align 8
  %55 = icmp slt i64 %53, %54
  br i1 %55, label %56, label %73

56:                                               ; preds = %52
  %57 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %58 = load i32**, i32*** %11, align 8
  %59 = load i64, i64* %13, align 8
  %60 = getelementptr inbounds i32*, i32** %58, i64 %59
  %61 = load i32*, i32** %60, align 8
  %62 = load i32 (i32*, i32)*, i32 (i32*, i32)** %7, align 8
  %63 = load i32, i32* %8, align 4
  %64 = call i32 @ExploreGraph(%struct.TYPE_6__* %57, i32* %61, i32 (i32*, i32)* %62, i32 %63)
  %65 = load i32**, i32*** %11, align 8
  %66 = load i64, i64* %13, align 8
  %67 = getelementptr inbounds i32*, i32** %65, i64 %66
  %68 = load i32*, i32** %67, align 8
  %69 = call i32 @IPin_Release(i32* %68)
  br label %70

70:                                               ; preds = %56
  %71 = load i64, i64* %13, align 8
  %72 = add nsw i64 %71, 1
  store i64 %72, i64* %13, align 8
  br label %52

73:                                               ; preds = %52
  %74 = load i32**, i32*** %11, align 8
  %75 = call i32 @CoTaskMemFree(i32** %74)
  br label %76

76:                                               ; preds = %73, %45
  %77 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  %78 = load i32*, i32** %77, align 8
  %79 = call i32 (i8*, ...) @TRACE(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.2, i64 0, i64 0), i32* %78)
  %80 = load i32 (i32*, i32)*, i32 (i32*, i32)** %7, align 8
  %81 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  %82 = load i32*, i32** %81, align 8
  %83 = load i32, i32* %8, align 4
  %84 = call i32 %80(i32* %82, i32 %83)
  br label %85

85:                                               ; preds = %76, %38
  %86 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  %87 = load i32*, i32** %86, align 8
  %88 = icmp ne i32* %87, null
  br i1 %88, label %89, label %93

89:                                               ; preds = %85
  %90 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  %91 = load i32*, i32** %90, align 8
  %92 = call i32 @IBaseFilter_Release(i32* %91)
  br label %93

93:                                               ; preds = %89, %85
  %94 = load i32, i32* %9, align 4
  ret i32 %94
}

declare dso_local i32 @TRACE(i8*, ...) #1

declare dso_local i32 @IPin_ConnectedTo(i32*, i32**) #1

declare dso_local i64 @SUCCEEDED(i32) #1

declare dso_local i32 @IPin_QueryPinInfo(i32*, %struct.TYPE_5__*) #1

declare dso_local i32 @GetInternalConnections(i32*, i32*, i32***, i64*) #1

declare dso_local i32 @IPin_Release(i32*) #1

declare dso_local i32 @CoTaskMemFree(i32**) #1

declare dso_local i32 @IBaseFilter_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
